<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button3"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/activar_servicio" />

        <Button
            android:id="@+id/button2"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/parar_servicio" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button1"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/mapa" />

        <Button
            android:id="@+id/button6"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/guardar" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/button9"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/alerta" />

        <Button
            android:id="@+id/button4"
            android:layout_width="100dp"
            android:layout_height="60dp"
            android:text="@string/panico" />

    </LinearLayout>

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
    </ListView>

</LinearLayout>
