<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Contactos" >

    <EditText
        android:id="@+id/n_con_1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/nombre_contacto_1"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tel_con_1"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/n_con_1"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/numero"
        android:inputType="phone" />

    <EditText
        android:id="@+id/n_con_2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tel_con_1"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/nombre_contacto_2"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/tel_con_2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/n_con_2"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/numero"
        android:inputType="phone"
        tools:ignore="HardcodedText" />

    <EditText
        android:id="@+id/n_con_3"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/tel_con_2"
        android:layout_marginTop="30dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/nombre_contacto_3"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/tel_con_3"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/n_con_3"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:layout_weight="1"
        android:ems="10"
        android:hint="@string/numero"
        android:inputType="phone" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tel_con_3"
        android:layout_marginTop="20dp" >

        <Button
            android:id="@+id/button2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="V" />

        <Button
            android:id="@+id/button1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="G" />
    </LinearLayout>

    <Button
        android:id="@+id/button10"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/tel_con_1"
        android:layout_toRightOf="@+id/n_con_1"
        android:text="U" />

    <Button
        android:id="@+id/button9"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/tel_con_2"
        android:layout_alignLeft="@+id/button10"
        android:text="U" />

    <Button
        android:id="@+id/button3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignBottom="@+id/tel_con_3"
        android:layout_toRightOf="@+id/tel_con_3"
        android:text="U" />

</RelativeLayout>